examples/test/testpolicy16260.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16260
  namespace: namespace260
spec:
  podSelector:
    matchLabels:
      key2: value47
      key15: value11
      key27: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value34
      podSelector:
        matchLabels:
          key19: value29
